src/com/wasmplugin/parser/WasmParser.java
// This is a generated file. Not intended for manual editing.
package com.wasmplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.wasmplugin.psi.WasmTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WasmParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == COM) {
      r = com(b, 0);
    }
    else if (t == DATA) {
      r = data(b, 0);
    }
    else if (t == DATA_SHORT) {
      r = data_short(b, 0);
    }
    else if (t == ELEM_SHORT) {
      r = elem_short(b, 0);
    }
    else if (t == ELEM_TYPE) {
      r = elem_type(b, 0);
    }
    else if (t == ELEMENT) {
      r = element(b, 0);
    }
    else if (t == EXPORT) {
      r = export(b, 0);
    }
    else if (t == EXPORT_DESC) {
      r = export_desc(b, 0);
    }
    else if (t == EXPORT_SHORT) {
      r = export_short(b, 0);
    }
    else if (t == FUNC) {
      r = func(b, 0);
    }
    else if (t == FUNC_TYPE) {
      r = func_type(b, 0);
    }
    else if (t == GLOBAL) {
      r = global(b, 0);
    }
    else if (t == GLOBAL_TYPE) {
      r = global_type(b, 0);
    }
    else if (t == IDX) {
      r = idx(b, 0);
    }
    else if (t == IMPORT) {
      r = import_$(b, 0);
    }
    else if (t == IMPORT_DESC) {
      r = import_desc(b, 0);
    }
    else if (t == IMPORT_SHORT) {
      r = import_short(b, 0);
    }
    else if (t == INSTRUCTION) {
      r = instruction(b, 0);
    }
    else if (t == LIMITS) {
      r = limits(b, 0);
    }
    else if (t == LOCAL) {
      r = local(b, 0);
    }
    else if (t == LOCAL_EXPLICIT) {
      r = local_explicit(b, 0);
    }
    else if (t == MEM_ARG) {
      r = mem_arg(b, 0);
    }
    else if (t == MEMORY) {
      r = memory(b, 0);
    }
    else if (t == MEMORY_TYPE) {
      r = memory_type(b, 0);
    }
    else if (t == NUM) {
      r = num(b, 0);
    }
    else if (t == OFFSET_DATA) {
      r = offset_data(b, 0);
    }
    else if (t == PARAM_EXPLICIT) {
      r = param_explicit(b, 0);
    }
    else if (t == PARAM_LIST) {
      r = param_list(b, 0);
    }
    else if (t == RESULT) {
      r = result(b, 0);
    }
    else if (t == RESULT_EXPLICIT) {
      r = result_explicit(b, 0);
    }
    else if (t == START) {
      r = start(b, 0);
    }
    else if (t == TABLE) {
      r = table(b, 0);
    }
    else if (t == TABLE_TYPE) {
      r = table_type(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == TYPE_USE) {
      r = type_use(b, 0);
    }
    else if (t == VALUE_TYPE) {
      r = value_type(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // tBLOCK tNAME? result? instruction* tEND tNAME?
  //                     |   tLOOP tNAME? result? instruction tEND tNAME?
  //                     |   tIF tNAME? result? instruction* else_clause? tEND tNAME?
  static boolean block_instruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block_instruction_0(b, l + 1);
    if (!r) r = block_instruction_1(b, l + 1);
    if (!r) r = block_instruction_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tBLOCK tNAME? result? instruction* tEND tNAME?
  private static boolean block_instruction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TBLOCK);
    r = r && block_instruction_0_1(b, l + 1);
    r = r && block_instruction_0_2(b, l + 1);
    r = r && block_instruction_0_3(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_0_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tNAME?
  private static boolean block_instruction_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_1")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // result?
  private static boolean block_instruction_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_2")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean block_instruction_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_instruction_0_3", c)) break;
    }
    return true;
  }

  // tNAME?
  private static boolean block_instruction_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_0_5")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // tLOOP tNAME? result? instruction tEND tNAME?
  private static boolean block_instruction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLOOP);
    r = r && block_instruction_1_1(b, l + 1);
    r = r && block_instruction_1_2(b, l + 1);
    r = r && instruction(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_1_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tNAME?
  private static boolean block_instruction_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_1")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // result?
  private static boolean block_instruction_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_2")) return false;
    result(b, l + 1);
    return true;
  }

  // tNAME?
  private static boolean block_instruction_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_1_5")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // tIF tNAME? result? instruction* else_clause? tEND tNAME?
  private static boolean block_instruction_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TIF);
    r = r && block_instruction_2_1(b, l + 1);
    r = r && block_instruction_2_2(b, l + 1);
    r = r && block_instruction_2_3(b, l + 1);
    r = r && block_instruction_2_4(b, l + 1);
    r = r && consumeToken(b, TEND);
    r = r && block_instruction_2_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tNAME?
  private static boolean block_instruction_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_1")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // result?
  private static boolean block_instruction_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_2")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean block_instruction_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_instruction_2_3", c)) break;
    }
    return true;
  }

  // else_clause?
  private static boolean block_instruction_2_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_4")) return false;
    else_clause(b, l + 1);
    return true;
  }

  // tNAME?
  private static boolean block_instruction_2_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_instruction_2_6")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  /* ********************************************************** */
  // BLOCK_COMMENT | LINE_COMMENT
  public static boolean com(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "com")) return false;
    if (!nextTokenIs(b, "<com>", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COM, "<com>");
    r = consumeToken(b, BLOCK_COMMENT);
    if (!r) r = consumeToken(b, LINE_COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // tLP tDATA idx? offset_data tNAME tRP
  public static boolean data(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TDATA);
    r = r && data_2(b, l + 1);
    r = r && offset_data(b, l + 1);
    r = r && consumeTokens(b, 0, TNAME, TRP);
    exit_section_(b, m, DATA, r);
    return r;
  }

  // idx?
  private static boolean data_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_2")) return false;
    idx(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // tLP tDATA tNAME tRP
  public static boolean data_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TDATA, TNAME, TRP);
    exit_section_(b, m, DATA_SHORT, r);
    return r;
  }

  /* ********************************************************** */
  // tLP tELEM idx* tRP
  public static boolean elem_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TELEM);
    r = r && elem_short_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, ELEM_SHORT, r);
    return r;
  }

  // idx*
  private static boolean elem_short_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_short_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!idx(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elem_short_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tANYFUNC
  public static boolean elem_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elem_type")) return false;
    if (!nextTokenIs(b, TANYFUNC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TANYFUNC);
    exit_section_(b, m, ELEM_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // tLP tELEM idx? tLP tNAME tRP tRP
  public static boolean element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TELEM);
    r = r && element_2(b, l + 1);
    r = r && consumeTokens(b, 0, TLP, TNAME, TRP, TRP);
    exit_section_(b, m, ELEMENT, r);
    return r;
  }

  // idx?
  private static boolean element_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_2")) return false;
    idx(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // tELSE tNAME? instruction*
  static boolean else_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause")) return false;
    if (!nextTokenIs(b, TELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TELSE);
    r = r && else_clause_1(b, l + 1);
    r = r && else_clause_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tNAME?
  private static boolean else_clause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_1")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // instruction*
  private static boolean else_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "else_clause_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP tTHEN instruction* tRP
  static boolean else_clause_folded(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_folded")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TTHEN);
    r = r && else_clause_folded_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // instruction*
  private static boolean else_clause_folded_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_clause_folded_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "else_clause_folded_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP tEXPORT tNAME export_desc tRP
  public static boolean export(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TEXPORT, TNAME);
    r = r && export_desc(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, EXPORT, r);
    return r;
  }

  /* ********************************************************** */
  // tLP (tFUNC|tMEMORY|tTABLE|tGLOBAL) idx tRP
  public static boolean export_desc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_desc")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLP);
    r = r && export_desc_1(b, l + 1);
    r = r && idx(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, EXPORT_DESC, r);
    return r;
  }

  // tFUNC|tMEMORY|tTABLE|tGLOBAL
  private static boolean export_desc_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_desc_1")) return false;
    boolean r;
    r = consumeToken(b, TFUNC);
    if (!r) r = consumeToken(b, TMEMORY);
    if (!r) r = consumeToken(b, TTABLE);
    if (!r) r = consumeToken(b, TGLOBAL);
    return r;
  }

  /* ********************************************************** */
  // tLP tEXPORT tNAME tRP
  public static boolean export_short(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_short")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TEXPORT, TNAME, TRP);
    exit_section_(b, m, EXPORT_SHORT, r);
    return r;
  }

  /* ********************************************************** */
  // instruction*
  static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // tLP plain_instruction folded_instruction* tRP
  //                     |   tLP tBLOCK tNAME? result? instruction* tRP
  //                     |   tLP tLOOP tNAME? result? instruction* tRP
  //                     |   tLP tIF tNAME? result? folded_instruction* tLP tTHEN instruction* tRP else_clause_folded? tRP
  static boolean folded_instruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction")) return false;
    if (!nextTokenIs(b, TLP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = folded_instruction_0(b, l + 1);
    if (!r) r = folded_instruction_1(b, l + 1);
    if (!r) r = folded_instruction_2(b, l + 1);
    if (!r) r = folded_instruction_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tLP plain_instruction folded_instruction* tRP
  private static boolean folded_instruction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TLP);
    r = r && plain_instruction(b, l + 1);
    r = r && folded_instruction_0_2(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // folded_instruction*
  private static boolean folded_instruction_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!folded_instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "folded_instruction_0_2", c)) break;
    }
    return true;
  }

  // tLP tBLOCK tNAME? result? instruction* tRP
  private static boolean folded_instruction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TBLOCK);
    r = r && folded_instruction_1_2(b, l + 1);
    r = r && folded_instruction_1_3(b, l + 1);
    r = r && folded_instruction_1_4(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }

  // tNAME?
  private static boolean folded_instruction_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_2")) return false;
    consumeToken(b, TNAME);
    return true;
  }

  // result?
  private static boolean folded_instruction_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_3")) return false;
    result(b, l + 1);
    return true;
  }

  // instruction*
  private static boolean folded_instruction_1_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_1_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instruction(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "folded_instruction_1_4", c)) break;
    }
    return true;
  }

  // tLP tLOOP tNAME? result? instruction* tRP
  private static boolean folded_instruction_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "folded_instruction_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TLP, TLOOP);
    r = r && folded_instruction_2_2(b, l + 1);
    r = r && folded_instruction_2_3(b, l + 1);
    r = r && folded_instruction_2_4(b, l + 1);
    r = r && consumeToken(b, TRP);
    exit_section_(b, m, null, r);
    return r;
  }
